force-app/main/default/objects/DFD_User_Details__c/DFD_User_Details__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>DFD User Details</label>
</CustomObject>