force-app/main/default/objects/DFD_User_Details__c/fields/isRegistered__c.field-meta.xml
<CustomField>
    <fullName>isRegistered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isRegistered</label>
    <type>Checkbox</type>
</CustomField>