force-app/main/default/objects/DFD_User_Details__c/fields/Token_Part_3__c.field-meta.xml
<CustomField>
    <fullName>Token_Part_3__c</fullName>
    <label>Token_Part_3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>