force-app/main/default/objects/DFD_User_Details__c/listViews/User_Token.listView-meta.xml
<ListView>
    <fullName>User_Token</fullName>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>SETUP_TYPE</columns>
    <columns>isRegistered__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>User Token</label>
</ListView>